feat: add prisma support and simplify db configuration
- Add @prisma/client dependency and update pnpm-lock.yaml
- Update .gitignore to exclude generated prisma files
- Modify Dockerfile.hbs and compose.yml.hbs to conditionally include prisma
- Simplify glazeen.config.json prompts for db setup

--- a/nextjs-template/glazeen.config.json
+++ b/nextjs-template/glazeen.config.json
@@ -4,57 +4,37 @@
   "prompts": [
     {
       "key": "project_name",
-      "type": "input",
-      "message": "Inserisci il nome del tuo progetto:",
+      "type": "text",
+      "message": "Insert your Project Name:",
       "default": "new-nextjs-app"
     },
     {
       "key": "project_description",
-      "type": "input",
-      "message": "Inserisci una breve descrizione del progetto:",
+      "type": "text",
+      "message": "Insert a brief description of your project:",
       "default": "new nextjs app"
     },
     {
-      "key": "db_type",
-      "type": "list",
-      "message": "Quale database vuoi configurare?",
-      "choices": ["Postgres", "MongoDB", "SQLite", "None"]
+      "key": "use_db",
+      "type": "confirm",
+      "message": "Do you want to use Prisma?",
+      "choices": {
+        "Yes": "pnpm exec prisma init",
+        "No": ""
+      },
+      "response_message": "Initializing Prisma..."
     },
     {
       "key": "docker_port",
-      "type": "input",
-      "message": "Su quale porta vuoi esporre l'app Docker?",
+      "type": "text",
+      "message": "On which port do you want to expose the Docker app?",
       "default": "3000"
     }
   ],
   "post_create": [
     {
       "command": "pnpm install",
-      "message": "Installazione delle dipendenze (pnpm install)..."
-    },
-    {
-      "command": "git init",
-      "message": "Inizializzazione di Git..."
-    },
-    {
-      "condition": "db_type != 'None'",
-      "command": "npx prisma generate",
-      "message": "Genero il client Prisma..."
-    },
-    {
-      "condition": "db_type == 'Postgres'",
-      "command": "pnpm exec prisma init --datasource-provider postgresql",
-      "message": "Setup database Postgres..."
-    },
-    {
-      "condition": "db_type == 'MongoDB'",
-      "command": "pnpm exec prisma init --datasource-provider mongodb",
-      "message": "Setup database MongoDB..."
-    },
-    {
-      "condition": "db_type == 'SQLite'",
-      "command": "pnpm exec prisma init --datasource-provider sqlite",
-      "message": "Setup database SQLite..."
+      "response_message": "Installing dependencies (pnpm install)..."
     }
   ]
 }
